<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".AddPdfActivity">

    <RelativeLayout
        android:id="@+id/tlbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_tlbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"/>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/backBtn"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/new_book"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <ImageButton
            android:id="@+id/attachBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attach_white"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/book_title"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textColorHint="@color/gray1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/title_wrap"
        android:layout_marginTop="5dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/desc_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_pdf_gray"
            android:drawablePadding="10dp"
            android:hint="@string/book_desc"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc_wrap"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_edittext01"
        android:drawableStart="@drawable/ic_category_gray"
        android:drawableEnd="@drawable/ic_down_gray"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/book_cat"
        android:padding="10dp"
        android:textColorHint="@color/gray1"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/attachbook"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/black"/>

</RelativeLayout>